force-app/main/default/objects/GTM_Instrument_Theme__mdt/GTM_Instrument_Theme__mdt.object-meta.xml
<CustomObject>
    <label>GTM Instrument Theme</label>
    <pluralLabel>GTM Instrument Themes</pluralLabel>
</CustomObject>