force-app/main/default/objects/GTM_Instrument_Theme__mdt/fields/Accent_Color__c.field-meta.xml
<CustomField>
    <fullName>Accent_Color__c</fullName>
    <label>Accent Color</label>
    <description>Hex color (e.g. #1A2B3C) used for interactive/highlight elements (buttons, progress indicators) on the guest-facing instrument page.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>