force-app/main/default/objects/GTM_Instrument_Theme__mdt/fields/Font_Family__c.field-meta.xml
<CustomField>
    <fullName>Font_Family__c</fullName>
    <label>Font Family</label>
    <description>CSS font-family value applied to the guest-facing instrument page for this theme (e.g. "'Helvetica Neue', Arial, sans-serif"). Blank falls back to the site's default font stack.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>