force-app/main/default/objects/GTM_Instrument_Theme__mdt/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <label>Logo URL</label>
    <description>Absolute URL to a logo image rendered at the top of the guest-facing instrument page for this theme. Blank falls back to the default site branding.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>