force-app/main/default/objects/GTM_Instrument_Theme__mdt/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <label>Primary Color</label>
    <description>Hex color (e.g. #1A2B3C) used for the primary brand accent on the guest-facing instrument page. No format validation at the metadata layer -- the rendering LWC (sub-issue 04) is responsible for defensively handling a malformed value.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>