force-app/main/default/objects/GTM_Instrument_Theme__mdt/fields/Secondary_Color__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Color__c</fullName>
    <label>Secondary Color</label>
    <description>Hex color (e.g. #1A2B3C) used for secondary/supporting brand elements on the guest-facing instrument page.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>